--- a/index.html
+++ b/index.html
@@ -1342,12 +1342,20 @@
       document.getElementById('current-pfp-img').src = playerImg.src;
       closeUploadModal();
       resetGame();
+      // Auto-launch Gameboy mode
+      if (!gameboyActive) {
+        toggleGameboy();
+      }
     }
     
     function startWithDefault() {
       playerImg = null;
       document.getElementById('current-pfp-img').src = "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 40'><rect fill='%23333' width='40' height='40'/><text x='20' y='25' text-anchor='middle' fill='%23666' font-size='20'>🐕</text></svg>";
       resetGame();
+      // Auto-launch Gameboy mode
+      if (!gameboyActive) {
+        toggleGameboy();
+      }
     }
     
     // Start render loop
