--- a/game.html
+++ b/game.html
@@ -34,14 +34,16 @@
 
     .gameboy {
       background: linear-gradient(145deg, #1a1a2e 0%, #0f0f1a 100%);
-      border-radius: 15px 15px 40px 40px;
-      padding: 20px 30px 35px;
+      border-radius: 20px 20px 80px 80px;
+      padding: 25px 40px 60px;
       box-shadow: 
-        0 0 0 3px #2a2a4a,
-        0 0 0 6px #1a1a2e,
-        0 10px 40px rgba(0,0,0,0.8);
+        0 0 0 4px #2a2a4a,
+        0 0 0 8px #1a1a2e,
+        0 15px 50px rgba(0,0,0,0.8);
+      position: relative;
       max-width: 95vw;
       max-height: 95vh;
+      transform: scale(1);
     }
 
     .gameboy-screen-frame {
@@ -75,24 +77,25 @@
     #gameCanvas {
       display: block;
       width: 100%;
-      max-width: 320px;
+      max-width: 400px;
       aspect-ratio: 5/3;
       image-rendering: pixelated;
       border-radius: 4px;
+      background: #1a1a2e;
     }
 
     .gameboy-controls {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-top: 15px;
-      padding: 0 5px;
+      margin-top: 20px;
+      padding: 0 10px;
     }
 
     .dpad {
       position: relative;
-      width: 70px;
-      height: 70px;
+      width: 90px;
+      height: 90px;
     }
 
     .dpad-btn {
@@ -103,50 +106,50 @@
     }
 
     .dpad-up, .dpad-down {
-      width: 22px;
-      height: 24px;
+      width: 28px;
+      height: 30px;
       left: 50%;
       transform: translateX(-50%);
     }
 
-    .dpad-up { top: 0; border-radius: 4px 4px 0 0; }
-    .dpad-down { bottom: 0; border-radius: 0 0 4px 4px; }
+    .dpad-up { top: 0; border-radius: 6px 6px 0 0; }
+    .dpad-down { bottom: 0; border-radius: 0 0 6px 6px; }
 
     .dpad-left, .dpad-right {
-      width: 24px;
-      height: 22px;
+      width: 30px;
+      height: 28px;
       top: 50%;
       transform: translateY(-50%);
     }
 
-    .dpad-left { left: 0; border-radius: 4px 0 0 4px; }
-    .dpad-right { right: 0; border-radius: 0 4px 4px 0; }
+    .dpad-left { left: 0; border-radius: 6px 0 0 6px; }
+    .dpad-right { right: 0; border-radius: 0 6px 6px 0; }
 
     .dpad-center {
-      width: 22px;
-      height: 22px;
+      width: 28px;
+      height: 28px;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
       background: #222;
-      border-radius: 2px;
+      border-radius: 3px;
     }
 
     .action-btns {
       display: flex;
-      gap: 12px;
+      gap: 15px;
       transform: rotate(-25deg);
     }
 
     .action-btn {
-      width: 35px;
-      height: 35px;
+      width: 45px;
+      height: 45px;
       border-radius: 50%;
       border: none;
       font-family: 'Press Start 2P', monospace;
-      font-size: 0.5rem;
+      font-size: 0.6rem;
       cursor: pointer;
-      box-shadow: 0 3px 0 rgba(0,0,0,0.5);
+      box-shadow: 0 4px 0 rgba(0,0,0,0.5);
     }
 
     .btn-b, .btn-a {
@@ -155,24 +158,24 @@
     }
 
     .btn-b:active, .btn-a:active {
-      transform: translateY(3px);
+      transform: translateY(4px);
       box-shadow: none;
     }
 
     .start-select {
       display: flex;
-      gap: 15px;
-      margin-top: 12px;
+      gap: 20px;
+      margin-top: 15px;
       justify-content: center;
     }
 
     .small-btn {
       background: #333;
       border: none;
-      padding: 6px 15px;
-      border-radius: 8px;
+      padding: 8px 20px;
+      border-radius: 10px;
       color: #666;
-      font-size: 0.4rem;
+      font-size: 0.45rem;
       font-family: 'Press Start 2P', monospace;
       cursor: pointer;
       transform: rotate(-25deg);
@@ -712,8 +715,10 @@
     }
 
     // Auto-start with default
-    restartGame();
-    loop();
+    document.addEventListener('DOMContentLoaded', function() {
+      restartGame();
+      loop();
+    });
   </script>
 </body>
 </html>
